# CopyBarA-2

./: .gitignore  CMakeLists.txt  Makefile  Workshops_system.db
.github/workflows/: build_and_test.yml  ci.yml
docs/: _config.yml  database-scema.md  functional-req.md  glossary.md  index.md  learning-links.md  non-functional.md  presentation.md  repo-link.md  specification.md
docs/files/: DB.sql  Автомастерские.pptx
include/: authenticator.h  date.h  server.h
src/: authenticator.cpp  date.cpp  main.cpp  server.cpp
tests/: tests.cpp
